--- a/ec2-instance.yaml
+++ b/ec2-instance.yaml
@@ -8,7 +8,7 @@ Resources:
       InstanceType: t2.micro
       ImageId: ami-0c55b159cbfafe1f0 # Amazon Linux 2 (us-east-1, puede variar según región)
       KeyName: CloudFormation-key.pem
-        - !Ref MiGrupoSeguridad
+        - !Ref CloudFormation-sg
 
   MiGrupoSeguridad:
     Type: "AWS::EC2::SecurityGroup"
