--- a/ec2-instance.yaml
+++ b/ec2-instance.yaml
@@ -1,21 +1,32 @@
 AWSTemplateFormatVersion: "2010-09-09"
-Description: "Stack simple para crear una instancia EC2"
+Description: "Stack EC2 parametrizado"
+
+Parameters:
+  TipoInstancia:
+    Type: String
+    Default: t2.micro
+    AllowedValues:
+      - t2.micro
+      - t3.micro
+      - t3.small
+    Description: "Selecciona el tipo de instancia"
 
 Resources:
-  MiInstanciaEC2:
+  InstanciaEC2:
     Type: "AWS::EC2::Instance"
     Properties:
-      InstanceType: t2.micro
-      ImageId: ami-0c55b159cbfafe1f0 # Amazon Linux 2 (us-east-1, puede variar según región)
-      KeyName: CloudFormation-key.pem
-        - !Ref CloudFormation-sg
+      InstanceType: !Ref TipoInstancia
+      ImageId: ami-0c55b159cbfafe1f0
+      KeyName: mi-par-clave
+      SecurityGroups:
+        - !Ref GrupoSeguridad
 
-  MiGrupoSeguridad:
+  GrupoSeguridad:
     Type: "AWS::EC2::SecurityGroup"
     Properties:
       GroupDescription: "Permite SSH"
-      SecurityGroupIngress:
-        - IpProtocol: tcp
-          FromPort: 22
-          ToPort: 22
-          CidrIp: 0.0.0.0/0
+
+Outputs:
+  IDInstancia:
+    Description: "ID de la instancia creada"
+    Value: !Ref InstanciaEC2
