--- a/ec2-instance.yaml
+++ b/ec2-instance.yaml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: "2010-09-09"
-Description: "Stack EC2 parametrizado"
+Description: "Stack EC2 parametrizado con AMI oficial de AWS"
 
 Parameters:
   TipoInstancia:
@@ -16,15 +16,24 @@ Resources:
     Type: "AWS::EC2::Instance"
     Properties:
       InstanceType: !Ref TipoInstancia
-      ImageId: ami-0c55b159cbfafe1f0
-      KeyName: mi-par-clave
+      ImageId: !Ref AMI
+      KeyName: mi-par-clave     # reemplazá con tu keypair existente
       SecurityGroups:
         - !Ref GrupoSeguridad
 
   GrupoSeguridad:
     Type: "AWS::EC2::SecurityGroup"
     Properties:
-      GroupDescription: "Permite SSH"
+      GroupDescription: "Permite SSH desde cualquier origen"
+      SecurityGroupIngress:
+        - IpProtocol: tcp
+          FromPort: 22
+          ToPort: 22
+          CidrIp: 0.0.0.0/0
+
+  AMI:
+    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
+    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2
 
 Outputs:
   IDInstancia:
